      doing a --full-trove-sync has been fixed
    * conary rq --trove-flags will now display redirect info even if you
      do not specify --troves (bug #877)
    * dep resolution now support --flavors --full-versions output (bug #751)
    * cvc merge no longer tracebacks if files were added on both upstream
      and on the shadow
  o Server Changes:
    * getNewSigList and getNewTroveList could return troveLists with
      duplicate entries

Changes in 1.0.8
  o Client changes:
    * Conary will now replace symlinks and regular files as long as their
      contents agree (bug #626)

  o Bug Fixes:
    * An error in the method of determining what local changes have been 
      made has been fixed.

Changes in 1.0.7:
  o Client changes:
    * A better method of determining what local changes have been made to a
      local system has been implemented, improving conary's behavior when
      updating.

  o Bugfixes:
    * A bug that caused the user to be prompted for their OpenPGP
      passphrase when building on a target label that does not match
      any signatureKeyMap entry has been fixed.  Previously, if you
      had a signatureKeyMap entry for conary.example.com, and your
      buildLabel was set to conary.example.com@rpl:devel, you would be
      prompted to enter a passphrase even when cooking locally to the
      local@local:COOK label.
    * Dependency resolution will no longer cause a trove to switch
      branches.
    * If a component is kept when performing dependency resolution
      because it is still needed, it's package will be kept as well if
      possible.
    * "conary q --path" now expands symlinks found in the path to the
      file in question. (bug #855)
    * Committing a changeset that provided duplicate file streams for
      streams the server previously referenced from other servers no
      longer causes a traceback.
    * Conary's patch implementation how handles patches which are
      already applied. (bug #640)